--- a/sentinel.conf
+++ b/sentinel.conf
@@ -1,6 +1,6 @@
-# specify path to dash.conf or leave blank
-# default is the same as DashCore
-#dash_conf=/home/evan82/.dashcore/dash.conf
+# specify path to galactrum.conf or leave blank
+# default is the same as GalactrumCore
+#galactrum_conf=/home/evan82/.galactrum/galactrum.conf
 
 # valid options are mainnet, testnet (default=mainnet)
 network=mainnet
